<resources>
    <string name="app_name">DailyChallenge</string>
    <string name="title">DailyChallenge</string>
    <string name="icon" translatable="false">icon</string>
    <string name="account">Please input account</string>
    <string name="account_null">Account is null!</string>
    <string name="accountIcon" translatable="false">accountIcon</string>
    <string name="passwordIcon" translatable="false">passwordIcon</string>
    <string name="loginButton">OK</string>
    <string name="version" translatable="false">0.1.3.2</string>
    <string name="username" translatable="false">%s</string>
    <string name="gold">Gold：%d</string>
    <string name="mathIcon" translatable="false">math</string>
    <string name="targetScore">TargetScore：%d</string>
    <string name="score">Score：%d</string>
    <string name="queText" translatable="false">%s</string>
    <string name="ansText">Answer is：</string>
    <string name="clear" translatable="false">C</string>
    <string name="ok" translatable="false">OK</string>
    <string name="yuwenIcon" translatable="false">yuwen</string>
    <string name="win_lose_icon" translatable="false">win_lose_icon</string>
    <string name="win_message">You win</string>
    <string name="gold_got_message">Got gold: %d</string>
    <string name="backButton">Back</string>
    <string name="loseMessage">You lose</string>
    <string name="gold_lose_message">Lose gold: %d</string>
    <string name="check_message">Checked, go on!</string>
    <string name="wait_message">Function in development</string>
    <string name="login_message_first">Welcom</string>
    <string name="login_message">Welcom back</string>
    <string name="back_challenge_message">Are you sure to quit?</string>
    <string name="back_login_message">Are you sure to quit?</string>
    <string name="back_yes_message">Yes</string>
    <string name="back_cancel_message">Cancel</string>
    <string name="login_fragment">login</string>
    <string name="home_fragment">home</string>
    <string name="challenge_fragment">challenge</string>
    <string name="win_fragment">win</string>
    <string name="lose_fragment">lose</string>
    <string name="quit_fragment">Are you sure to quit?</string>
    <string name="ans_null">No answer!</string>
    <integer name="num1" translatable="false">1</integer>
    <integer name="num2" translatable="false">2</integer>
    <integer name="num3" translatable="false">3</integer>
    <integer name="num4" translatable="false">4</integer>
    <integer name="num5" translatable="false">5</integer>
    <integer name="num6" translatable="false">6</integer>
    <integer name="num7" translatable="false">7</integer>
    <integer name="num8" translatable="false">8</integer>
    <integer name="num9" translatable="false">9</integer>
    <integer name="num0" translatable="false">0</integer>
    <string name="level_title">Level</string>
    <string name="level_icon" translatable="false">level_icon</string>
    <string name="level_check">You will start challenge, sure?</string>
    <string name="level_fragment">level</string>
</resources>