<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.kariol.dailychallenge.UserModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoseFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline49"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <ImageView
            android:id="@+id/loseIcon"
            android:layout_width="@dimen/max_width"
            android:layout_height="@dimen/max_height"
            android:contentDescription="@string/win_lose_icon"
            android:src="@drawable/lose"
            app:layout_constraintBottom_toTopOf="@+id/guideline55"
            app:layout_constraintEnd_toStartOf="@+id/guideline51"
            app:layout_constraintStart_toStartOf="@+id/guideline50"
            app:layout_constraintTop_toTopOf="@+id/guideline53" />

        <TextView
            android:id="@+id/loseMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loseMessage"
            android:textSize="@dimen/title_font_size"
            app:layout_constraintBottom_toTopOf="@+id/guideline56"
            app:layout_constraintEnd_toStartOf="@+id/guideline52"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline49"
            app:layout_constraintTop_toTopOf="@+id/guideline55"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/loseGoldMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/gold_lose_message(user.loseGold)}"
            android:textSize="@dimen/title_font_size"
            app:layout_constraintBottom_toTopOf="@+id/guideline56"
            app:layout_constraintEnd_toStartOf="@+id/guideline52"
            app:layout_constraintStart_toStartOf="@+id/guideline49"
            app:layout_constraintTop_toTopOf="@+id/guideline55"
            app:layout_constraintVertical_bias="0.5"
            tools:text="@string/gold_lose_message"/>

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#756F6F"
            android:text="@string/backButton"
            app:layout_constraintBottom_toTopOf="@+id/guideline56"
            app:layout_constraintEnd_toStartOf="@+id/guideline52"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline49"
            app:layout_constraintTop_toTopOf="@+id/guideline55"
            app:layout_constraintVertical_bias="0.7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>